catalog/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: catalog
    app.kubernetes.io/component: catalog
    app.kubernetes.io/instance: catalog
    app.kubernetes.io/part-of: catalog
    app.openshift.io/runtime: spring
  name: catalog
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: catalog
    weight: 100
  wildcardPolicy: None
